--- a/styles.css
+++ b/styles.css
@@ -1,114 +1,509 @@
-body {
-  position: relative;
-  height: 100vh;
-  width: 100%;
-
-}
-
-.container {
-    display: flex;
-    width: 1200px;
-    height: 2400px;
+.main {
+    /*親要素*/
+    position: relative;
+    background: orange;
+    height: 9000px;
+  }
+  
+  .main .main-box {
     position: absolute;
-    top: 50%;
+    background: white;
+    top: 4%;
     left: 50%;
-    transform: translate(-50%, -50%);
-    flex-direction: column;
-    flex-wrap: wrap;
-}
-
-.main-box {
-    background: rgb(255, 255, 255);
-    border: 1px solid rgba(8, 8, 8, 0.3);
-    border-radius: 4px;
-    box-sizing: border-box;
+    -webkit-transform : translate(-50%,-50%);
+    transform : translate(-50%,-50%);
+    width: 430px;
     height: 600px;
-    max-width: 430px;
-    width: 100%;
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: row;
+    text-align: center;/*一応BOX内の文字も中央寄せ*/
+  }
 
+  .container {
+      display: grid;
+      grid-template-rows: 600px;
+      grid-template-columns: 215px 215px;
+  }
+
+  #itemA {
+      grid-row: 1/2;
+      grid-column: 1/2;
+      background-color: tomato;
+      width: 215px;
+      height: 600px;
+      object-fit: cover;
+  }
+  #itemB {
+      grid-row: 1/2;
+      grid-column: 2/3;
+      background-color: rgb(71, 99, 255);
+      width: 215px;
+      height: 600px;
+      object-fit: cover;
+  }
+
+  .container2pic-ver {
+    display: grid;
+    grid-template-rows: 300px 300px;
+    grid-template-columns: 430px;
     position: absolute;
-    top: 50%;
+    top: 1100px;
     left: 50%;
-    transform: translate(-50%, -50%);
+    transform : translate(-50%,-50%);
+
+  }
+
+  #itemC {
+      grid-row: 1/2;
+      grid-column: 1/2;
+      background-color: turquoise;
+      width: 430px;
+      height: 300px;
+      object-fit: cover;
+  }
+  #itemD {
+      grid-row: 2/3;
+      grid-column: 1/2;
+      background-color: rgb(224, 141, 64);
+      width: 430px;
+      height: 300px;
+      object-fit: cover;
+  }
+
+  /* 画像3枚 */
+  .container3pic-1ver {
+      display: grid;
+      grid-template-rows: 300px 300px;
+      grid-template-columns: 300px 300px;
+      position: absolute;
+      top: 1800px;
+      left: 50%;
+      transform : translate(-50%,-50%);
 }
 
-.main-box3pic {
-    background: rgb(100, 90, 90);
-    border: 1px solid rgba(8, 8, 8, 0.3);
-    border-radius: 4px;
-    box-sizing: border-box;
-    height: 600px;
-    max-width: 430px;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-}
-
-
-
-.c-2pic img {
-    width: 213px;
+#itemE {
+    grid-row: 1/3;
+    grid-column: 1/2;
+    background: violet;
+    width: 300px;
     height: 600px;
     object-fit: cover;
-
 }
 
-.c-2pic-col img {
-    width: 430px;
+#itemF {
+    grid-row: 1/2;
+    grid-column: 2/3;
+    background: rgb(30, 170, 60);
+
+    width: 300px;
     height: 300px;
     object-fit: cover;
-    display: flex;
 }
 
-.row-2pic {
-    position: absolute;
-    left: 140px;
-}
-
-.row-3pic {
-    position: absolute;
-    left: 1050px;
-    display: flex;
-}
-
-.row-3pic-2pic-bottom {
-    position: absolute;
-    top: 1850px;
-    left: 140px;
-    flex-direction: row;
-}
-
-.row-3pic-2pic-bottom0 {
-    position: absolute;
-    top: 1850px;
-    left: 50%;
-    flex-direction: row;
-}
-
-
-
-.main-box3pic .c-3pic img{
-    width: 215px;
-    height: 600px;
+#itemG {
+    grid-row: 2/3;
+    grid-column: 2/3;
+    background: rgb(233, 90, 7);
+    width: 300px;
+    height: 300px;
     object-fit: cover;
 
 }
-.main-box3pic .c-3pic-square img{
-    width: 210px;
-    height: 290px;
-    object-fit: contain;
 
+.container3pic-1side {
+      display: grid;
+      grid-template-rows: 300px 300px;
+      grid-template-columns: 300px 300px;
+      position: absolute;
+      top: 2500px;
+      left: 50%;
+      transform : translate(-50%,-50%);
+}
+
+#itemH {
+    grid-row: 1/2;
+    grid-column: 1/3;
+    background-color: violet;
+    width: 600px;
+    height: 300px;
+    object-fit: cover;
+    
+}
+#itemI {
+    grid-row: 2/3;
+    grid-column: 1/2;
+    background-color: rgb(57, 10, 228);
+
+    width: 300px;
+    height: 300px;
+    object-fit: cover;
+
+}
+#itemJ {
+    grid-row: 2/3;
+    grid-column: 2/3;
+    background-color: rgb(211, 4, 38);
+
+    width: 300px;
+    height: 300px;
+    object-fit: cover;
+}
+
+.container3pic-1sidebig {
+    display: grid;
+    grid-template-rows: 400px 200px;
+    grid-template-columns: 300px 300px;
+    position: absolute;
+    top: 3200px;
+    left: 50%;
+    transform : translate(-50%,-50%);
+}
+
+#itemK {
+    grid-row: 1/2;
+    grid-column: 1/3;
+    background-color: violet;
+    width: 600px;
+    height: 400px;
+    object-fit: cover;
+    
+}
+#itemN {
+    grid-row: 2/3;
+    grid-column: 1/2;
+    background-color: rgb(57, 10, 228);
+
+    width: 300px;
+    height: 200px;
+    object-fit: cover;
+
+}
+#itemM {
+    grid-row: 2/3;
+    grid-column: 2/3;
+    background-color: rgb(211, 4, 38);
+
+    width: 300px;
+    height: 200px;
+    object-fit: cover;
+}
+
+/* 画像4枚 */
+.container4pic {
+    display: grid;
+    grid-template-rows: 300px 300px;
+    grid-template-columns: 300px 300px;
+    position: absolute;
+    top: 3900px;
+    left: 50%;
+    transform : translate(-50%,-50%);
+}
+
+#itemo {
+    grid-row: 1/2;
+    grid-column: 1/2;
+    background: rgb(30, 170, 60);
+
+    width: 300px;
+    height: 300px;
+    object-fit: cover;
+}
+
+#itemp {
+    grid-row: 2/3;
+    grid-column: 1/2;
+    background: rgb(218, 13, 132);
+
+    width: 300px;
+    height: 300px;
+    object-fit: cover;
+}
+
+#itemq {
+    grid-row: 1/2;
+    grid-column: 2/3;
+    background: rgb(6, 136, 223);
+
+    width: 300px;
+    height: 300px;
+    object-fit: cover;
+}
+
+#itemr {
+    grid-row: 2/3;
+    grid-column: 2/3;
+    background: rgb(238, 144, 3);
+
+    width: 300px;
+    height: 300px;
+    object-fit: cover;
+}
+
+/* 4枚下mini3枚 */
+
+.container4pic-3bottom {
+    display: grid;
+    grid-template-rows: 400px 200px;
+    grid-template-columns: 200px 200px 200px;
+    position: absolute;
+    top: 4700px;
+    left: 50%;
+    transform : translate(-50%,-50%);
+}
+
+#items {
+    grid-row: 1/2;
+    grid-column: 1/4;
+    background: rgb(30, 170, 60);
+
+    width: 600px;
+    height: 400px;
+    object-fit: cover;
+}
+
+#itemt {
+    grid-row: 2/3;
+    grid-column: 1/2;
+    background: rgb(218, 13, 132);
+
+    width: 200px;
+    height: 200px;
+    object-fit: cover;
+}
+
+#itemu {
+    grid-row: 2/3;
+    grid-column: 2/3;
+    background: rgb(6, 136, 223);
+
+    width: 200px;
+    height: 200px;
+    object-fit: cover;
+}
+
+#itemv {
+    grid-row: 2/3;
+    grid-column: 3/4;
+    background: rgb(238, 144, 3);
+
+    width: 200px;
+    height: 200px;
+    object-fit: cover;
+}
+
+/* 4枚サイドmini3枚 */
+.container4pic-3side {
+    display: grid;
+    grid-template-rows: 200px 200px 200px;
+    grid-template-columns: 400px 200px;
+    position: absolute;
+    top: 5500px;
+    left: 50%;
+    transform : translate(-50%,-50%);
+}
+
+#itemw {
+    grid-row: 1/4;
+    grid-column: 1/2;
+    background: rgb(30, 170, 60);
+
+    width: 400px;
+    height: 600px;
+    object-fit: cover;
+}
+
+#itemx {
+    grid-row: 1/2;
+    grid-column: 2/3;
+    background: rgb(218, 13, 132);
+
+    width: 200px;
+    height: 200px;
+    object-fit: cover;
+}
+
+#itemy {
+    grid-row: 2/3;
+    grid-column: 2/3;
+    background: rgb(6, 136, 223);
+
+    width: 200px;
+    height: 200px;
+    object-fit: cover;
+}
+
+#itemz {
+    grid-row: 3/4;
+    grid-column: 2/3;
+    background: rgb(238, 144, 3);
+
+    width: 200px;
+    height: 200px;
+    object-fit: cover;
+}
+
+/* 4枚下3枚通常の大きさ */
+
+.container4pic-3bottom-nomal{
+    display: grid;
+    grid-template-rows: 400px 200px;
+    grid-template-columns: 200px 200px 200px;
+    position: absolute;
+    top: 6200px;
+    left: 50%;
+    transform : translate(-50%,-50%);
+}
+
+#item1 {
+    grid-row: 1/2;
+    grid-column: 1/4;
+    background: rgb(30, 170, 60);
+
+    width: 600px;
+    height: 400px;
+    object-fit: cover;
+}
+
+#item2 {
+    grid-row: 2/3;
+    grid-column: 1/2;
+    background: rgb(218, 13, 132);
+
+    width: 200px;
+    height: 200px;
+    object-fit: cover;
+}
+
+#item3 {
+    grid-row: 2/3;
+    grid-column: 2/3;
+    background: rgb(6, 136, 223);
+
+    width: 200px;
+    height: 200px;
+    object-fit: cover;
+}
+
+#item4 {
+    grid-row: 2/3;
+    grid-column: 3/4;
+    background: rgb(238, 144, 3);
+
+    width: 200px;
+    height: 200px;
+    object-fit: cover;
+}
+
+/* 4枚side3枚通常の大きさ */
+
+.container4pic-3side-nomal{
+    display: grid;
+    grid-template-rows: 200px 200px 200px;
+    grid-template-columns: 400px 200px;
+    position: absolute;
+    top: 7000px;
+    left: 50%;
+    transform : translate(-50%,-50%);
+}
+
+#item5 {
+    grid-row: 1/4;
+    grid-column: 1/2;
+    background: rgb(30, 170, 60);
+
+    width: 400px;
+    height: 600px;
+    object-fit: cover;
+}
+
+#item6 {
+    grid-row: 1/2;
+    grid-column: 2/3;
+    background: rgb(218, 13, 132);
+
+    width: 200px;
+    height: 200px;
+    object-fit: cover;
+}
+
+#item7 {
+    grid-row: 2/3;
+    grid-column: 2/3;
+    background: rgb(6, 136, 223);
+
+    width: 200px;
+    height: 200px;
+    object-fit: cover;
+}
+
+#item8 {
+    grid-row: 3/4;
+    grid-column: 2/3;
+    background: rgb(238, 144, 3);
+
+    width: 200px;
+    height: 200px;
+    object-fit: cover;
+}
+
+/* 5枚side3枚通常の大きさ */
+
+.container5pic-3side{
+    display: grid;
+    grid-template-rows: 200px 100px 100px 200px;
+    grid-template-columns: 300px 300px;
+    position: absolute;
+    top: 7800px;
+    left: 50%;
+    transform : translate(-50%,-50%);
+}
+
+#item9 {
+    grid-row: 1/3;
+    grid-column: 1/2;
+    background: rgb(30, 170, 60);
+
+    width: 300px;
+    height: 300px;
+    object-fit: cover;
+}
+
+#item10 {
+    grid-row: 3/5;
+    grid-column: 1/2;
+    background: rgb(218, 13, 132);
+
+    width: 300px;
+    height: 300px;
+    object-fit: cover;
+}
+
+#item11 {
+    grid-row: 1/2;
+    grid-column: 2/3;
+    background: rgb(6, 136, 223);
+
+    width: 300px;
+    height: 200px;
+    object-fit: cover;
 }
 
 
+#item12 {
+    grid-row: 2/4;
+    grid-column: 2/3;
+    background: rgb(238, 144, 3);
 
+    width: 300px;
+    height: 200px;
+    object-fit: cover;
+}
+
+#item13 {
+    grid-row: 4/5;
+    grid-column: 2/3;
+    background: rgb(231, 255, 11);
+
+    width: 300px;
+    height: 200px;
+    object-fit: cover;
+}
 
