--- a/styles.css
+++ b/styles.css
@@ -1,15 +1,61 @@
 .main {
     /*親要素*/
     position: relative;
-    background: orange;
+    background: transparent;
     height: 9000px;
+    padding: 0;
+    margin: 0;    
+  }
+  .test {
+      background-color: rgb(245, 1, 245);
+      width: 500px;
+      height: 7000px;
+  }
+
+  .a{
+      width: 200px;
+      height: 200px;
+  }
+  .b{
+      width: 200px;
+      height: 200px;
+  }
+  .c{
+      width: 200px;
+      height: 200px;
+  }
+  .d{
+      width: 200px;
+      height: 200px;
+  }
+  .e{
+      width: 200px;
+      height: 200px;
+  }
+
+  .change-position {
+      position: absolute;
+      top: 300px;
+      left: 0px;
+      height: 3000px;
+  }
+  .change-position2 {
+      position: absolute;
+      top: 300px;
+      left: 0px;
+      height: 7500px;
+  }
+  .change-position3 {
+      position: absolute;
+      top: 300px;
+      left: 0px;
+      height: 15000px;
   }
   
   .main .main-box {
     position: absolute;
-    background: white;
     top: 4%;
-    left: 50%;
+    left: 20%;
     -webkit-transform : translate(-50%,-50%);
     transform : translate(-50%,-50%);
     width: 430px;
@@ -46,7 +92,7 @@
     grid-template-columns: 430px;
     position: absolute;
     top: 1100px;
-    left: 50%;
+    left: 20%;
     transform : translate(-50%,-50%);
 
   }
@@ -75,7 +121,7 @@
       grid-template-columns: 300px 300px;
       position: absolute;
       top: 1800px;
-      left: 50%;
+      left: 20%;
       transform : translate(-50%,-50%);
 }
 
@@ -193,7 +239,7 @@
     grid-template-columns: 300px 300px;
     position: absolute;
     top: 3900px;
-    left: 50%;
+    left: 20%;
     transform : translate(-50%,-50%);
 }
 
@@ -452,7 +498,7 @@
     grid-template-columns: 300px 300px;
     position: absolute;
     top: 7800px;
-    left: 50%;
+    left: 20%;
     transform : translate(-50%,-50%);
 }
 
