--- a/styles.css
+++ b/styles.css
@@ -37,7 +37,7 @@
       position: absolute;
       top: 300px;
       left: 0px;
-      height: 3000px;
+      height: 3400px;
   }
   .change-position2 {
       position: absolute;
@@ -49,13 +49,13 @@
       position: absolute;
       top: 300px;
       left: 0px;
-      height: 15000px;
+      height: 15500px;
   }
   
   .main .main-box {
     position: absolute;
     top: 4%;
-    left: 20%;
+    left: 50%;
     -webkit-transform : translate(-50%,-50%);
     transform : translate(-50%,-50%);
     width: 430px;
@@ -92,7 +92,7 @@
     grid-template-columns: 430px;
     position: absolute;
     top: 1100px;
-    left: 20%;
+    left: 50%;
     transform : translate(-50%,-50%);
 
   }
@@ -121,7 +121,7 @@
       grid-template-columns: 300px 300px;
       position: absolute;
       top: 1800px;
-      left: 20%;
+      left: 50%;
       transform : translate(-50%,-50%);
 }
 
@@ -239,7 +239,7 @@
     grid-template-columns: 300px 300px;
     position: absolute;
     top: 3900px;
-    left: 20%;
+    left: 50%;
     transform : translate(-50%,-50%);
 }
 
@@ -498,7 +498,7 @@
     grid-template-columns: 300px 300px;
     position: absolute;
     top: 7800px;
-    left: 20%;
+    left: 50%;
     transform : translate(-50%,-50%);
 }
 
@@ -553,3 +553,31 @@
     object-fit: cover;
 }
 
+.button {
+    font-size: 18px;
+    display: inline-block;
+    padding: 0.5em 1em 0.3em;
+    position: relative;
+    color: #990000;
+    border: solid 2px #990000;
+    border-radius: 5px;
+    background-color: transparent;
+    cursor: pointer;
+  }
+  
+  .button:before {
+    background-color: #f1e2e2;
+    border-radius: 5px;
+    content: "";
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    left: 5px;
+    top: 5px;
+    z-index: -1;
+  }
+
+  .space-module {
+      padding-bottom: 50px;
+      padding-top: 20px;
+  }
